# yeectl

./: CMakeLists.txt  README.md  conanfile.txt  resources.qrc
.github/workflows/: ci-build.yml
src/: device.cpp  device.hpp  device_manager.hpp  device_manager_wrapper.hpp  devicelist.cpp  devicelist.hpp  main.qml  multicast_worker.cpp  multicast_worker.hpp  resources.qrc  util.cpp  util.hpp  yeectl.cpp  yeectl.hpp
